--- a/LinkShortener-UI/pom.xml
+++ b/LinkShortener-UI/pom.xml
@@ -31,6 +31,8 @@
             <groupId>ir.bki</groupId>
             <artifactId>LinkShortener-ejb</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
+
         </dependency>
 
         <dependency>
