BasicAuthNeededFilter  userDao = (UserDao) ctx.lookup("java:global.LinkShortener-ear_ear.LinkShortener-ejb.UserDao");  =>  userDao = (UserDao) ctx.lookup("java:app/LinkShortener-ejb/UserDao");

--- a/LinkShortener-ejb/pom.xml
+++ b/LinkShortener-ejb/pom.xml
@@ -86,12 +86,12 @@
             <scope>provided</scope>
         </dependency>
 
-<!--        &lt;!&ndash; https://mvnrepository.com/artifact/javax.persistence/toplink-essentials &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>javax.persistence</groupId>-->
-<!--            <artifactId>toplink-essentials</artifactId>-->
-<!--            <version>1.0</version>-->
-<!--        </dependency>-->
+        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/javax.persistence/toplink-essentials &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>javax.persistence</groupId>-->
+        <!--            <artifactId>toplink-essentials</artifactId>-->
+        <!--            <version>1.0</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>persistence-api</artifactId>
@@ -133,6 +133,11 @@
             <version>1.27</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hashids</groupId>
+            <artifactId>hashids</artifactId>
+            <version>1.0.3</version>
+        </dependency>
 
     </dependencies>
 
