--- a/LinkShortener-UI/pom.xml
+++ b/LinkShortener-UI/pom.xml
@@ -32,7 +32,6 @@
             <artifactId>LinkShortener-ejb</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
-
         </dependency>
 
         <dependency>
@@ -40,6 +39,24 @@
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.6.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>popper.js</artifactId>
+            <version>2.5.4</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.6.0</version>
         </dependency>
 
     </dependencies>
