--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
                 <version>2.8.6</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.hashids</groupId>
+                <artifactId>hashids</artifactId>
+                <version>1.0.3</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
